--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,9 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 img {
@@ -23,4 +27,27 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.top {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 32px;
+}
+
+.bottom {
+  display: flex;
+  justify-content: space-between;
+  gap: 52px;
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 200px
+}
+
+.text {
+  text-align: center;
 }
