--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,8 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 12px;
 }
 
 .icon {
@@ -33,6 +35,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
+  margin: 8px;
 }
 
 .close-button {
@@ -48,6 +52,8 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  margin: 8px;
+  flex-shrink: 0;
 }
 
 button {
@@ -66,4 +72,31 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+}
+
+.header {
+  font-weight: bold;
+  font-size: 18px;
+  margin: 8px;
+}
+
+.top {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  margin-top: 4px;
+}
+
+.text {
+  margin-left: 8px;
+}
+
+.buttons {
+  padding: 8px;
+  margin-top: 8px;
 }
